--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "sweetalert": "^2.1.0",
     "vue": "^2.5.2",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1"
   },
